# claude-conversation-extractor

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.cursor/rules/: cli-development.mdc  data-processing.mdc  development-workflow.mdc  project-overview.mdc  quick-reference.mdc  testing-standards.mdc  version-management.mdc
.github/workflows/: docs.yml  release.yml
docs/: coding-standards.md  distribution-summary.md  distribution.md  index.md  installation.md  requirements.md  usage.md  version-management.md
docs/reference/: cli.md  extractor.md  markdown_converter.md  models.md
homebrew/: claude-conversation-extractor.rb
scripts/: build-linux.sh  build-windows.py
src/claude_conversation_extractor/: __init__.py  cli.py  extractor.py  markdown_converter.py  models.py
tests/: test_extractor.py
